changing main title on bigfeature

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>My App</title>
 </head>
 <body>
-  <h1>shoping list</h1>
+  <h1>!!!This is a TODO list now!!</h1>
     <p id="first">get it done today</p>
     <p class="second">no excuses</p>
    
